<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_aggrement">Пользовательское соглашение</string>
    <string name="open_messenger_error">Не удалось открыть мессенджер</string>
    <string name="support_message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_404">Ничего не нашлось</string>
    <string name="search_500_1">Проблемы со связью</string>
    <string name="search_500_2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="recent_tracks_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites_tracks_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <plurals name="n_tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="n_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>

    <string name="finish_create_playlist_title">Завершить создание плейлиста?</string>
    <string name="finish_create_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="finish_create_playlist_yes">Завершить</string>
    <string name="finish_create_playlist_no">Отмена</string>

    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="want_to_remove_track">Хотите удалить трек?</string>
    <string name="want_to_remove_playlist">Хотите удалить плейлист «%1$s»?</string>

    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
</resources>