<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimarySurface">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/screen_horizontal_padding"
        android:orientation="vertical">
        <FrameLayout style="@style/SettingsItemStyle">
            <TextView
                style="@style/SettingsItemLabelStyle"
                android:text="@string/dark_theme"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/share_app"
            style="@style/SettingsItemStyle">
            <TextView
                style="@style/SettingsItemLabelStyle"
                android:text="@string/share_app"/>
            <ImageView
                style="@style/SettingsItemIconStyle"
                android:src="@drawable/share_icon"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/write_to_support"
            style="@style/SettingsItemStyle">
            <TextView
                style="@style/SettingsItemLabelStyle"
                android:text="@string/write_to_support"/>
            <ImageView
                style="@style/SettingsItemIconStyle"
                android:src="@drawable/support_icon"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/user_aggrement"
            style="@style/SettingsItemStyle">
            <TextView
                style="@style/SettingsItemLabelStyle"
                android:text="@string/user_aggrement"/>
            <ImageView
                style="@style/SettingsItemIconStyle"
                android:src="@drawable/arrow_forward_icon" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
