<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/player_toolbar"
        style="@style/ToolbarStyle"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_xxl" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_xxl" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_xl" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_xl" />

    <ImageView
        android:id="@+id/artwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_xxl"
        android:contentDescription="oblojka"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/right_top_guideline"
        app:layout_constraintStart_toStartOf="@id/left_top_guideline"
        app:layout_constraintTop_toBottomOf="@+id/player_toolbar"
        app:srcCompat="@drawable/track_placeholder" />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="0dp"
        app:layout_constrainedWidth="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:textSize="@dimen/text_size_l"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorPrimary"
        android:text="Dont't play Bae"
        app:layout_constraintTop_toBottomOf="@id/artwork"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="@id/left_top_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_top_guideline"/>

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="0dp"
        app:layout_constrainedWidth="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:textSize="@dimen/text_size_s"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorPrimary"
        android:text="Прошлая молли"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        app:layout_constraintStart_toStartOf="@id/left_top_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_top_guideline"/>

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="52dp"
        android:layout_height="52dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_top_guideline"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        android:src="@drawable/player_add"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_marginTop="@dimen/space_xxl"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:layout_constraintEnd_toStartOf="@id/fav_button"
        android:src="@drawable/player_play"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/artist_name" />

    <ImageButton
        android:id="@+id/fav_button"
        android:layout_width="52dp"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="@id/right_top_guideline"
        app:layout_constraintStart_toEndOf="@id/play_button"
        android:src="@drawable/player_fav"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        />

    <TextView
        android:id="@+id/timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:textSize="@dimen/text_size_s"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorPrimary"
        android:text="0:30"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/gray"
        android:text="@string/duration"
        app:layout_constraintTop_toBottomOf="@id/timing"
        app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />

    <TextView
        android:id="@+id/duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimary"
        android:text="5:35"
        app:layout_constraintBaseline_toBaselineOf="@+id/duration"
        app:layout_constraintEnd_toEndOf="@id/right_bottom_guideline" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/gray"
        android:text="@string/album"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />

    <TextView
        android:id="@+id/album_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBaseline_toBaselineOf="@+id/album"
        app:layout_constraintEnd_toEndOf="@id/right_bottom_guideline" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/gray"
        android:text="@string/year"
        app:layout_constraintTop_toBottomOf="@id/album"
        app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />

    <TextView
        android:id="@+id/year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimary"
        android:text="1853"
        app:layout_constraintBaseline_toBaselineOf="@+id/year"
        app:layout_constraintEnd_toEndOf="@id/right_bottom_guideline" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/gray"
        android:text="@string/genre"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />

    <TextView
        android:id="@+id/genre_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimary"
        android:text="Rock"
        app:layout_constraintBaseline_toBaselineOf="@+id/genre"
        app:layout_constraintEnd_toEndOf="@id/right_bottom_guideline" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/gray"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />

    <TextView
        android:id="@+id/country_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimary"
        android:text="Великобритания"
        app:layout_constraintBaseline_toBaselineOf="@+id/country"
        app:layout_constraintEnd_toEndOf="@id/right_bottom_guideline" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/album_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="album,album_value" />

</androidx.constraintlayout.widget.ConstraintLayout>